--- a/templates/base.html
+++ b/templates/base.html
@@ -721,7 +721,7 @@
 </head>
 <body>
     <div class="wrapper">
-        {% if request.user.role == "Distric Supritendant" %}
+        {% if request.user.role == "District Supritendant" %}
         {% include "includes/district_sidebar.html" %}
         {% else %}
         {% include "includes/sidebar.html" %}
