--- a/templates/districts/capture_section_data.html
+++ b/templates/districts/capture_section_data.html
@@ -123,6 +123,52 @@
                         />
                     </div>
                 </div>
+
+                <div class="row mb-3">
+                    <div class="col">
+                        <label for="exampleInputPassword1" class="form-label fw-bold">KAGDOM</label>
+                        <input
+                            type="number"
+                            class="form-control"
+                            id="kagdom"
+                            name="kagdom"
+                            value="0"
+                        />
+                    </div>
+                    <div class="col">
+                        <label for="exampleInputPassword1" class="form-label fw-bold">District Missions</label>
+                        <input
+                            type="number"
+                            class="form-control"
+                            id="district_missions"
+                            name="district_missions"
+                            value="0"
+                        />
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col">
+                        <label for="exampleInputPassword1" class="form-label fw-bold">Resource Mobilisation</label>
+                        <input
+                            type="number"
+                            class="form-control"
+                            id="resource_mobilisation"
+                            name="resource_mobilisation"
+                            value="0"
+                        />
+                    </div>
+                    <div class="col">
+                        <label for="exampleInputPassword1" class="form-label fw-bold">Church Support</label>
+                        <input
+                            type="number"
+                            class="form-control"
+                            id="church_support"
+                            name="church_support"
+                            value="0"
+                        />
+                    </div>
+                </div>
                 
                 <div class="text-center mt-3">
                   <input type="submit" class="btn btn-primary w-30" value="Capture Section Data" />
