--- a/templates/districts/new_report.html
+++ b/templates/districts/new_report.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="text-center mt-3">
-                  <input type="submit" class="btn btn-primary w-30" value="Add Report" />
+                  <input type="submit" class="btn btn-primary w-30" value="Generate District Form Report" />
                 </div>
               </div>
             </form>
