--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -329,9 +329,8 @@
                 <i class="fas fa-church"></i>
             </div>
         </div>
-        
-
-        
+        <h3 style="text-align: center;">KAG NAIROBI DISTRICT</h3>
+        <br>
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }} show" role="alert">
