--- a/templates/districts/district_report.html
+++ b/templates/districts/district_report.html
@@ -370,6 +370,48 @@
         </table>
       </div>
 
+      <div class="section">
+        <h2 class="section-title">Additionals</h2>
+        <table>
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Amount</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1.</td>
+                  <td>KAGDOM</td>
+                  <td>{{ total_kagdom }}</td>
+              </tr>
+              <tr>
+                  <td>2.</td>
+                  <td>District Missions</td>
+                  <td>{{ total_district_missions }}</td>
+              </tr>
+              <tr>
+                  <td>3.</td>
+                  <td>Resource Mobilisation</td>
+                  <td>{{ total_resource_mobilisation }}</td>
+              </tr>
+              <tr>
+                  <td>4.</td>
+                  <td>Church Support</td>
+                  <td>{{ total_church_support }}</td>
+              </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td></td>
+              <td>Grand Total</td>
+              <td>{{total_additionals}}</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+
       <!-- Signatures -->
       <div class="signatures">
         <div class="signature-line"><span>District Supt. Signature</span></div>
