--- a/templates/districts/reports.html
+++ b/templates/districts/reports.html
@@ -13,7 +13,7 @@
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newDistrictReportModal">Add Report</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newDistrictReportModal">Generate District Form Report</button>
           </div>
     </div>
     <!-- Table Toolbar --> 
@@ -41,7 +41,7 @@
                     <td>{{ report.created_at }}</td>
                     <td>
                         <div class="d-flex gap-1">
-                            <a href="{% url 'district-report-details' report.id %}" class="btn btn-info btn-sm"><i class="fas fa-eye"></i></a>
+                            <a href="{% url 'district-report-details' report.id %}" class="btn btn-info btn-sm">Fill {{report.month}} Report</a>
                             <a class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editDistrictReportModal{{report.id}}"><i class="fas fa-edit"></i></a>
                         </div>
                     </td>
