--- a/templates/includes/district_sidebar.html
+++ b/templates/includes/district_sidebar.html
@@ -1,6 +1,6 @@
 <nav id="sidebar">
     <div class="sidebar-header d-flex justify-content-between align-items-center">
-        <span class="text-white link-text">CHURCH ERP</span>
+        <span class="text-white link-text">KAG NAIROBI DISTRICT</span>
         <button class="hamburger" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
