--- a/templates/districts/report_details.html
+++ b/templates/districts/report_details.html
@@ -46,25 +46,35 @@
                     <th><span>Special Offering</span></th>
                     <th><span>Adult Att.</span></th>
                     <th><span>Children Att.</span></th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody id="tableBody">
-                {% for report in reports %}
+                {% for section_report in reports %}
                 <tr>
                     <td>{{ forloop.counter }}</td>
-                    <td>{{ report.section }}</td>
-                    <td>{{ report.section.presbyter.name }}</td>
-                    <td>{{ report.general_fund }}</td>
-                    <td>{{ report.sunday_school }}</td>
-                    <td>{{ report.pastors_fund }}</td>
-                    <td>{{ report.presbyter_tithe }}</td>
-                    <td>{{ report.pastors_tithe }}</td>
-                    <td>{{ report.easter }}</td>
-                    <td>{{ report.kenya_kids }}</td>
-                    <td>{{ report.special_offering}}</td>
-                    <td>{{ report.adult }}</td>
-                    <td>{{ report.children }}</td>
+                    <td>{{ section_report.section }}</td>
+                    <td>{{ section_report.section.presbyter.name }}</td>
+                    <td>{{ section_report.general_fund }}</td>
+                    <td>{{ section_report.sunday_school }}</td>
+                    <td>{{ section_report.pastors_fund }}</td>
+                    <td>{{ section_report.presbyter_tithe }}</td>
+                    <td>{{ section_report.pastors_tithe }}</td>
+                    <td>{{ section_report.easter }}</td>
+                    <td>{{ section_report.kenya_kids }}</td>
+                    <td>{{ section_report.special_offering}}</td>
+                    <td>{{ section_report.adult }}</td>
+                    <td>{{ section_report.children }}</td>
+                    <td>
+                        
+                        <div class="d-flex gap-1">
+                            <a class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editSectionDataModal{{section_report.id}}"><i class="fas fa-edit"></i></a>
+                            <a class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteSectionDataModal{{section_report.id}}"><i class="fas fa-trash"></i></a>
+                        </div>
                     
+                    </td>
+                    {% include "districts/edit_section_data.html" %}
+                    {% include "districts/delete_section_data.html" %}
                 </tr>
                 {% empty %}
                 <tr>
