--- a/templates/projects/new_project.html
+++ b/templates/projects/new_project.html
@@ -71,7 +71,7 @@
                   <div class="col">
                     <label for="exampleInputPassword1" class="form-label fw-bold">Project Type</label>
                      <select class="form-select" name="project_type" id="project_type" required>
-                      <option value="" disabled selected>Select Status</option>
+                      <option value="" disabled selected>Select Project Type</option>
                       {% for project_type in project_types %}
                       <option value="{{ project_type }}">{{ project_type }}</option>
                       {% endfor %}
