--- a/templates/districts/meetings/meetings.html
+++ b/templates/districts/meetings/meetings.html
@@ -13,7 +13,7 @@
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newDistrictMeetingModal">New Meetings</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newDistrictMeetingModal">New Baraza Register</button>
         </div>
     </div>
     <!-- Table Toolbar --> 
@@ -41,7 +41,9 @@
                     <td>{{ meeting.meeting_date }}</td>
                     <td>
                         <div class="d-flex gap-1">
-                            <a href="{% url 'district-meeting-details' meeting.id %}" class="btn btn-info btn-sm"><i class="fas fa-eye"></i></a>
+                            <a href="{% url 'district-meeting-details' meeting.id %}" class="btn btn-info btn-sm">Record Attendance</a>
+                            <a data-bs-toggle="modal" data-bs-target="#editMeetingModal{{meeting.id}}" class="btn btn-info btn-sm"><i class="fa-solid fa-pencil"></i></a>
+                            <a href="#" class="btn btn-primary btn-sm"><i class="fa-solid fa-download"></i></a>
                         </div>
                     </td>
                    {% include "districts/meetings/edit_meeting.html" %}
